--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-serve": "^1.2.0",
     "gulp-uglify": "^0.3.1",
+    "gulp-webserver": "^0.9.1",
     "jshint-stylish": "^0.4.0",
     "karma": "^0.12.22",
     "karma-chai": "^0.1.0",
