--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
       "email": "jean.gonzalez@sillpacorp.com"
     }
   ],
-  "main": ["dist/slpa-video-player.js"],
+  "main": [
+    "dist/slpa-video-player.js"
+  ],
   "ignore": [
     "src",
     "test",
@@ -15,7 +17,9 @@
     "karma-*.conf.js",
     "**/.*"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0"
+  },
   "devDependencies": {
     "angular-mocks": ">=1.2.0",
     "angular-scenario": ">=1.2.0",
