--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
     "name": "Jean Gonzalez",
     "email": "jean.gonzalez@sillpacorp.com"
   },
+  "homepage": "https://github.com/jeangonzalez/slpa-video-player",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jeangonzalez/slpa-video-player.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jeangonzalez/slpa-video-player"
+  },
   "dependencies": {},
   "devDependencies": {
     "chai": "^1.9.1",
     "chai-jquery": "^1.2.3",
     "gulp": "^3.8.7",
     "gulp-concat": "^2.3.4",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-jshint": "^1.8.4",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
