--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,10 @@
     "**/.*"
   ],
   "dependencies": {
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0"
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
+    "angular-material": "^1.0.5",
+    "ngstorage": "^0.3.10",
+    "angular-block-ui": "^0.2.2"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.0",
